add angularjs and bootsrap

--- a/html/home.html
+++ b/html/home.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>aviv test</title>
+    <title>home</title>
 </head>
 <body>
-
-hello
-
+home
 </body>
 </html>
