add new page test

--- a/html/nav.html
+++ b/html/nav.html
@@ -3,21 +3,17 @@
 <div id="nav">
 	<nav class="navbar navbar-expand-sm navbar-custom fixed-top">
 		<a class="navbar-brand" href="#" ng-click=""><img src="img/fei_logo_dark_blue.png" height="45" width="90"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
-				aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
 		<div class="collapse navbar-collapse" id="navbarToggler">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="#" ng-click="">
+					<a class="nav-link" href="#" ng-click="hide_pages();init_avivTest()">
 						<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true">
 						</span>
 						Home
 					</a>
 				</li>
 				<li class="nav-item" >
-					<a class="nav-link" href="#" ng-click="">
+					<a class="nav-link" href="#" ng-click="hide_pages();show_page2()">
 						<span class="glyphicon glyphicon glyphicon-option-vertical" aria-hidden="true" >
 						</span>
 						About
