--- a/html/home.html
+++ b/html/home.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>home</title>
-</head>
-<body>
-home
-</body>
-</html>
+<div id="home" style="margin-top: 100px">
+
+ home
+</div>
