move new user form to modal in nav

--- a/html/exp.html
+++ b/html/exp.html
@@ -24,10 +24,15 @@
             <input type="text" class="form-control" placeholder="Pairs To Display" aria-label="Pairs To Display"
                    aria-describedby="material-addon3">
         </div>
-        <div class="col-sm-4 input-group">
+        <div class="col-sm-6 md-form input-group">
             <div class="custom-file">
                 <input type="file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
                 <label class="custom-file-label" for="inputGroupFile04">Choose XSD file</label>
+            </div>
+            <span class="input-group-text  md-addon"> </span>
+            <div class="custom-file">
+                <input type="file" class="custom-file-input" id="inputGroupFile05" aria-describedby="inputGroupFileAddon05">
+                <label class="custom-file-label" for="inputGroupFile05">Choose XML file</label>
             </div>
 
         </div>
@@ -39,52 +44,4 @@
 
     </div>
 
-    <div class="col-sm-12">
-        <h2>User Registration</h2>
-        <div class="col-sm-12">
-            <div class="col-sm-4 md-form input-group mb-4">
-                <input type="text" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="material-addon1">
-                <span class="input-group-text md-addon"> </span>
-
-                <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="material-addon2">
-
-            </div>
-        </div>
-        <div class="col-sm-12">
-            <div class="col-sm-4 md-form input-group mb-3">
-                <div class="input-group-prepend">
-                    <input type="text" class="form-control" placeholder="Email" aria-label="Email">
-                </div>
-                <span class="input-group-text md-addon">@</span>
-                <div class="input-group-append">
-                    <input type="text" class="form-control">
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-12">
-            <div class="col-sm-8 md-form input-group mb-4">
-                <input type="text" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
-                <span class="input-group-text md-addon"> </span>
-                <input type="text" class="form-control" placeholder="Language" aria-label="Language" aria-describedby="material-addon5">
-                <span class="input-group-text md-addon"> </span>
-                <input type="text" class="form-control" placeholder="Age" aria-label="Age" aria-describedby="material-addon6">
-                <span class="input-group-text md-addon"> </span>
-                <input type="text" class="form-control" placeholder="Occupation" aria-label="Occupation" aria-describedby="material-addon7">
-                <span class="input-group-text md-addon"> </span>
-                <input type="text" class="form-control" placeholder="Education" aria-label="Education" aria-describedby="material-addon8">
-                <span class="input-group-text md-addon"> </span>
-                <input type="text" class="form-control" placeholder="Gender" aria-label="Gender" aria-describedby="material-addon9">
-
-
-            </div>
-        </div>
-        <div class="md-form input-group mb-3">
-            <div class="input-group-prepend" id="MaterialButton-addon2">
-                <button class="btn btn-md btn-info m-0 px-3" type="button">Add User</button>
-            </div>
-        </div>
-
-
-
-    </div>
 </div>
