--- a/html/nav.html
+++ b/html/nav.html
@@ -49,6 +49,7 @@
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
 							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_user_modal">Add User </a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment </a>
 						</div>
 					 </li>
 				</ul>
@@ -103,6 +104,96 @@
 					</div>
 						<button class="btn btn-md btn-info m-1 px-3" type="button">Add User</button>
 						<button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="modal fade" id="add_exp_modal" tabindex="-1" role="dialog" aria-labelledby="Add User Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Add Experiment</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+
+						<div class="form-row">
+							<div class="col">
+								<div class="col-sm-10 md-form">
+									<input type="text" class="form-control" placeholder="Experiment Name" aria-label="Experiment Name" aria-describedby="material-addon1">
+
+								</div>
+								<div class="col-sm-10 md-form mb-4">
+									<input type="text" class="form-control" placeholder="Schema Name" aria-label="Schema Name"
+										   aria-describedby="material-addon2">
+								</div>
+								<div class="col-sm-10 md-form mb-4">
+									<input type="text" class="form-control" placeholder="Pairs To Display" aria-label="Pairs To Display"
+										   aria-describedby="material-addon3">
+								</div>
+							</div>
+							<div class="col" style="margin-top: 25px">
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+									<label class="custom-control-label" for="defaultUnchecked">Display instances</label>
+								</div>
+
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="defaultUnchecked1">
+									<label class="custom-control-label" for="defaultUnchecked1">Display type</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="defaultUnchecked2">
+									<label class="custom-control-label" for="defaultUnchecked2">Display Hierarchy</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="defaultUnchecked3">
+									<label class="custom-control-label" for="defaultUnchecked3">Feedback</label>
+
+								</div>
+							</div>
+						</div>
+
+
+						<div class="form-row">
+							<div class="col">
+								<div class="col-sm-12 md-form input-group">
+									<div class="custom-file">
+										<input type="file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
+										<label class="custom-file-label" for="inputGroupFile04">Choose XSD file</label>
+									</div>
+									<span class="input-group-text  md-addon"> </span>
+									<div class="custom-file">
+										<input type="file" class="custom-file-input" id="inputGroupFile05" aria-describedby="inputGroupFileAddon05">
+										<label class="custom-file-label" for="inputGroupFile05">Choose XML file</label>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<div class="form-row">
+							<div class="col">
+								<div class="col-sm-12 md-form input-group">
+									<div class="col-sm-6 custom-file ">
+										<input type="file" class="custom-file-input" id="inputGroupFile06" aria-describedby="inputGroupFileAddon06">
+										<label class="custom-file-label" for="inputGroupFile05">Choose CSV file</label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<div id="add_exp_log">
+
+					</div>
+					<button class="btn btn-md btn-info m-1 px-3" type="button">Add Experiment</button>
+					<button class="btn btn-md btn-info m-0 px-3" type="button" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
