add experiment template

--- a/html/exp.html
+++ b/html/exp.html
@@ -7,11 +7,110 @@
     <hr>
 
 
-    <div class="col-sm-12">
-        <h2>Add Experiment</h2>
+    <div class="col-sm-12 text-center" >
+
+        <div class="row">
+            <div class="col">
+                <h3>Term A</h3>
+            </div>
+            <div class="col">
+                <h3>Term B</h3>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col">
+                FirstName
+            </div>
+            <div class="col">
+                YourName
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col">
+                String
+            </div>
+
+            <div class="col">
+                Varchar
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col">
+                System Suggestion: 0.6 similar
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                Roee, Avigdor
+            </div>
+
+            <div class="col">
+                Roee Shraga, Avigdor
+            </div>
+
+        </div>
+        <div class="row" style="margin-top: 5px">
+            <div class="col text-center">
+                <table align="center">
+                    <tr>
+                        <td>
+                            FullName
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <i class="fas fa-long-arrow-alt-right"></i>FirstNAme
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="col text-center">
+                <table align="center">
+                    <tr>
+                        <td>
+                            Details
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <i class="fas fa-long-arrow-alt-right"></i>
+                            YourName
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
 
 
+
+        <div class="row">
+            <div class="col">
+                <div style="margin-top: 100px; ">
+                    <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
+                        <input type="text" id="inputPassword5MD" class="form-control" aria-describedby="passwordHelpBlockMD">
+                        <label for="inputPassword5MD">Your Confidence</label>
+                        <small id="passwordHelpBlockMD" class="form-text text-muted">
+                            Insert Confidence level that this two terms are the same (in [0,1])
+                        </small>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+
+        </div>
 
     </div>
+
+
+
+
 
 </div>
