get exp details test

--- a/html/exp.html
+++ b/html/exp.html
@@ -19,10 +19,10 @@
 
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col" id="A_col_name">
                 FirstName
             </div>
-            <div class="col">
+            <div class="col" id="B_col_name">
                 YourName
             </div>
 
