get exp details test

--- a/html/exp.html
+++ b/html/exp.html
@@ -28,11 +28,11 @@
 
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col" id="A_col_type">
                 String
             </div>
 
-            <div class="col">
+            <div class="col" id="B_col_type">
                 Varchar
             </div>
 
@@ -43,11 +43,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col" id="A_col_instance">
                 Roee, Avigdor
             </div>
 
-            <div class="col">
+            <div class="col" id="B_col_instance">
                 Roee Shraga, Avigdor
             </div>
 
