--- a/html/nav.html
+++ b/html/nav.html
@@ -3,7 +3,7 @@
 <div id="nav">
 	<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="#" ng-click=""><img src="img/fei_logo_dark_blue.png" height="45" width="90"></a>
+			<a class="navbar-brand" href="#" ng-click="" id="navHeader">Schema Matching</a>
 			<!-- Left links-->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
@@ -48,8 +48,9 @@
 						<a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" href="#"  aria-haspopup="true"
 						   aria-expanded="false">More</a>
 						<div class="dropdown-menu  dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" id="navbar_admin">
-							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_user_modal">Add User </a>
-							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment </a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_user_modal">Add User</a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#admin_login">Log in</a>
+							<a class="dropdown-item" href="#"  data-toggle="modal" data-target="#add_exp_modal">Add Experiment</a>
 						</div>
 					 </li>
 				</ul>
@@ -264,7 +265,43 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="admin_login" tabindex="-1" role="dialog" aria-labelledby="Add User Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Admin Log-in</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div id="loginForm">
+						<div class="container">
+							<div class="login-form">
+								<div class="main-div">
+									<div class="md-form">
+										<i class="fas fa-envelope prefix"></i>
+										<input type="email" id="inputValidationEx" class="form-control validate">
+										<label for="inputValidationEx" data-error="wrong" data-success="right">Type your email</label>
+									</div>
+									<div class="md-form">
+										<i class="fas fa-lock prefix"></i>
+										<input type="password" id="inputValidationEx2" class="form-control">
+										<label for="inputValidationEx2" data-error="wrong" data-success="right">Type your password</label>
+									</div>
+								</div>
+							</div>
+						</div>
 
+					</div>
+					<div class="modal-footer">
+						<div id="admin_login_log">
 
-
+						</div>
+						<button class="btn btn-md btn-info m-0 px-3" type="button">Login</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
