--- a/html/exp.html
+++ b/html/exp.html
@@ -38,7 +38,7 @@
 
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col" id="exp_pair_score">
                 System Suggestion: 0.6 similar
             </div>
         </div>
