test exp result

--- a/html/exp.html
+++ b/html/exp.html
@@ -92,11 +92,13 @@
             <div class="col">
                 <div style="margin-top: 100px; ">
                     <div class="md-form col-sm-5" style="margin: 0 auto;float: none;">
-                        <input type="text" id="inputPassword5MD" class="form-control" aria-describedby="passwordHelpBlockMD">
-                        <label for="inputPassword5MD">Your Confidence</label>
-                        <small id="passwordHelpBlockMD" class="form-text text-muted">
+                        <input type="text" id="user_confidence" class="form-control" aria-describedby="user_confidenceMD">
+                        <label for="user_confidence">Your Confidence</label>
+                        <small id="user_confidenceMD" class="form-text text-muted">
                             Insert Confidence level that this two terms are the same (in [0,1])
                         </small>
+                        <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()">Login</button>
+
                     </div>
 
 
