--- a/html/exp.html
+++ b/html/exp.html
@@ -97,9 +97,9 @@
                         <small id="user_confidenceMD" class="form-text text-muted">
                             Insert Confidence level that this two terms are the same (in [0,1])
                         </small>
-                        <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()">Login</button>
 
                     </div>
+                    <button class="btn btn-md btn-info m-0 px-3" type="button" ng-click="exp_res()">submit</button>
 
 
                 </div>
