begin exp - new user

--- a/html/new_user.html
+++ b/html/new_user.html
@@ -1,4 +1,4 @@
-<div id="begin_exp_user">
+<div id="begin_exp_user" style="margin-top: 100px">
 
 	<h5 >Add User</h5>
 
@@ -35,6 +35,6 @@
 	<div id="add_user_log">
 
 	</div>
-	<button class="btn btn-md btn-info m-1 px-3" type="button" >Add User</button>
+	<button class="btn btn-md btn-info m-1 px-3" type="button" ng-click="new_user_exp()">Add User</button>
 
 </div>
