--- a/html/exp.html
+++ b/html/exp.html
@@ -54,31 +54,30 @@
         </div>
         <div class="row" style="margin-top: 5px">
             <div class="col text-center">
-                <table align="center">
-                    <tr>
+                <table align="center" ng-repeat="item in h_1">
+                    <tr ng-if="item.index==0">
                         <td>
-                            FullName
+                            {{item.val}}
                         </td>
                     </tr>
-                    <tr>
+                    <tr ng-if="item.index!=0">
                         <td>
-                            <i class="fas fa-long-arrow-alt-right"></i>FirstNAme
+                            <i class="fas fa-long-arrow-alt-right"></i>{{item.val}}
                         </td>
                     </tr>
                 </table>
             </div>
 
             <div class="col text-center">
-                <table align="center">
-                    <tr>
+                <table align="center" ng-repeat="item2 in h_2">
+                    <tr ng-if="item2.index==0">
                         <td>
-                            Details
+                            {{item2.val}}
                         </td>
                     </tr>
-                    <tr>
+                    <tr ng-if="item2.index!=0">
                         <td>
-                            <i class="fas fa-long-arrow-alt-right"></i>
-                            YourName
+                            <i class="fas fa-long-arrow-alt-right"></i>{{item2.val}}
                         </td>
                     </tr>
                 </table>
