--- a/html/exp.html
+++ b/html/exp.html
@@ -1,4 +1,4 @@
-<div id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
+<div id="experiment" style="margin-top: 100px" ng-init="captureCoordinate($event)">
 
 
     <h1>
