--- a/html/exp.html
+++ b/html/exp.html
@@ -62,7 +62,7 @@
                     </tr>
                     <tr ng-if="item.index!=0">
                         <td>
-                            <i class="fas fa-long-arrow-alt-right"></i>{{item.val}}
+                            <i class="fas fa-long-arrow-alt-right"></i> {{decorateWithB($index,item.val)}}
                         </td>
                     </tr>
                 </table>
