exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -62,7 +62,7 @@
                     </tr>
                     <tr ng-if="item.index!=0">
                         <td>
-                            {{decorateWithB($index,item.val)}}
+                            {{decorateWithSpace($index)}} <i class="fas fa-long-arrow-alt-right"></i> {{item.val}}
                         </td>
                     </tr>
                 </table>
