exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -53,8 +53,8 @@
 
         </div>
         <div class="row" style="margin-top: 5px">
-            <div class="col text-center">
-                <table align="center" ng-repeat="item in h_1">
+            <div>
+                <table ng-repeat="item in h_1">
                     <tr ng-if="item.index==0">
                         <td>
                             {{item.val}}
