--- a/html/exp.html
+++ b/html/exp.html
@@ -53,7 +53,7 @@
 
         </div>
         <div class="row" style="margin-top: 5px">
-            <div>
+            <div class="col text-center">
                 <table ng-repeat="item in h_1">
                     <tr ng-if="item.index==0">
                         <td>
@@ -62,7 +62,7 @@
                     </tr>
                     <tr ng-if="item.index!=0">
                         <td>
-                            {{decorateWithSpace($index)}} <i class="fas fa-long-arrow-alt-right"></i> {{item.val}}
+                            {{decorateWithSpace($index,item.val)}}
                         </td>
                     </tr>
                 </table>
