exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -54,7 +54,7 @@
         </div>
         <div class="row" style="margin-top: 5px">
             <div class="col text-center">
-                <table ng-repeat="item in h_1">
+                <table ng-repeat="item in h_1" id="term_a_table_h">
                     <tr ng-if="item.index==0">
                         <td>
                             {{item.val}}
