exp form design

--- a/html/exp.html
+++ b/html/exp.html
@@ -61,7 +61,7 @@
                         </td>
                     </tr>
                     <tr ng-if="item.index!=0">
-                        <td>
+                        <td id="table_a_{{$index}}">
                             {{decorateWithSpace($index,item.val)}}
                         </td>
                     </tr>
