--- a/html/exp.html
+++ b/html/exp.html
@@ -54,17 +54,19 @@
         </div>
         <div class="row" style="margin-top: 5px">
             <div class="col text-center">
-                <table align="center" ng-repeat="item in h_1" id="term_a_table_h">
-                    <tr ng-if="item.index==0">
-                        <td>
-                            {{item.val}}
-                        </td>
-                    </tr>
-                    <tr ng-if="item.index!=0">
-                        <td id="table_a_{{$index}}">
-                            {{decorateWithSpace($index,item.val)}}
-                        </td>
-                    </tr>
+                <table align="center"  id="term_a_table_h">
+                    <tbody ng-repeat="item in h_1">
+                        <tr ng-if="item.index==0">
+                            <td>
+                                {{item.val}}
+                            </td>
+                        </tr>
+                        <tr ng-if="item.index!=0">
+                            <td id="table_a_{{$index}}">
+                                {{decorateWithSpace($index,item.val)}}
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
 
