--- a/html/exp.html
+++ b/html/exp.html
@@ -71,17 +71,19 @@
             </div>
 
             <div class="col text-center">
-                <table align="center" ng-repeat="item2 in h_2">
-                    <tr ng-if="item2.index==0">
-                        <td>
-                            {{item2.val}}
-                        </td>
-                    </tr>
-                    <tr ng-if="item2.index!=0">
-                        <td>
-                            <i class="fas fa-long-arrow-alt-right"></i>{{item2.val}}
-                        </td>
-                    </tr>
+                <table align="center" id="term_b_table_h">
+                    <tbody ng-repeat="item2 in h_2">
+                        <tr ng-if="item2.index==0">
+                            <td>
+                                {{item2.val}}
+                            </td>
+                        </tr>
+                        <tr ng-if="item2.index!=0">
+                            <td id="table_b_{{$index}}">
+                                {{decorateWithSpace($index,item2.val)}}
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
 
