--- a/html/new_user.html
+++ b/html/new_user.html
@@ -11,23 +11,33 @@
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-8 md-form input-group mb-5">
-			<input type="text" class="form-control" placeholder="Email" aria-label="Email">
-			<span class="input-group-text md-addon">@</span>
-			<input type="text" class="form-control">
+			<i class="fas fa-envelope prefix"></i>
+			<input type="email" id="inputValidationEx" class="form-control validate">
+			<label for="inputValidationEx" data-error="wrong" data-success="right">Type your email</label>
 		</div>
 	</div>
 	<div class="col-sm-12">
 		<div class="col-sm-12 md-form input-group mb-4">
+			<i class="fas fa-map-marked"></i>
 			<input type="text" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
 			<span class="input-group-text md-addon"> </span>
+			<i class="fas fa-language"></i>
 			<input type="text" class="form-control" placeholder="Language" aria-label="Language" aria-describedby="material-addon5">
 			<span class="input-group-text md-addon"> </span>
+			<i class="fas fa-child"></i>
 			<input type="text" class="form-control" placeholder="Age" aria-label="Age" aria-describedby="material-addon6">
 			<span class="input-group-text md-addon"> </span>
+		</div>
+		<div class="col-sm-12 md-form input-group mb-4">
+			<i class="fas fa-briefcase"></i>
 			<input type="text" class="form-control" placeholder="Occupation" aria-label="Occupation" aria-describedby="material-addon7">
 			<span class="input-group-text md-addon"> </span>
+
+			<i class="fas fa-school"></i>
 			<input type="text" class="form-control" placeholder="Education" aria-label="Education" aria-describedby="material-addon8">
 			<span class="input-group-text md-addon"> </span>
+
+			<i class="fas fa-venus-mars"></i>
 			<input type="text" class="form-control" placeholder="Gender" aria-label="Gender" aria-describedby="material-addon9">
 		</div>
 	</div>
