--- a/html/new_user.html
+++ b/html/new_user.html
@@ -12,8 +12,8 @@
 	<div class="col-sm-12">
 		<div class="col-sm-8 md-form input-group mb-5">
 			<i class="fas fa-envelope prefix"></i>
-			<input type="email" id="inputValidationEx" class="form-control validate">
-			<label for="inputValidationEx" data-error="wrong" data-success="right">Type your email</label>
+			<input type="email" id="new_user_email" class="form-control validate">
+			<label for="new_user_email" data-error="wrong" data-success="right">Type your email</label>
 		</div>
 	</div>
 	<div class="col-sm-12">
@@ -28,7 +28,7 @@
 			<input type="text" class="form-control" placeholder="Age" aria-label="Age" aria-describedby="material-addon6">
 			<span class="input-group-text md-addon"> </span>
 		</div>
-		<div class="col-sm-12 md-form input-group mb-4">
+		<div class="col-sm-12 md-form input-group mb-5">
 			<i class="fas fa-briefcase"></i>
 			<input type="text" class="form-control" placeholder="Occupation" aria-label="Occupation" aria-describedby="material-addon7">
 			<span class="input-group-text md-addon"> </span>
