--- a/html/new_user.html
+++ b/html/new_user.html
@@ -2,32 +2,45 @@
 
 	<h5 >Add User</h5>
 
-	<div class="col-sm-12">
-		<div class="col-sm-8 md-form input-group mb-4">
-			<input type="text" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="material-addon1">
-			<span class="input-group-text md-addon"> </span>
+	<div class="row">
+		<div class="col">
+			<div class="md-form">
+				<input type="text" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="material-addon1">
+			</div>
+		</div>
+		<div class="col">
 			<input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="material-addon2">
 		</div>
 	</div>
-	<div class="col-sm-12">
-		<div class="col-sm-8 md-form input-group">
-			<i class="fas fa-envelope prefix"></i>
-			<input type="email" id="new_user_email" class="form-control validate">
-			<label for="new_user_email" data-error="wrong" data-success="right">Type your email</label>
+	<div class="row">
+		<div class="col">
+			<div class="md-form">
+				<i class="fas fa-envelope prefix"></i>
+				<input type="email" id="new_user_email" class="form-control validate">
+				<label for="new_user_email" data-error="wrong" data-success="right">Type your email</label>
+			</div>
 		</div>
 	</div>
-	<div class="col-sm-12">
-		<div class="col-sm-12 md-form input-group">
-			<i class="fas fa-map-marked"></i>
-			<input type="text" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
-			<span class="input-group-text md-addon"> </span>
-			<i class="fas fa-language"></i>
-			<input type="text" class="form-control" placeholder="Language" aria-label="Language" aria-describedby="material-addon5">
-			<span class="input-group-text md-addon"> </span>
-			<i class="fas fa-child"></i>
-			<input type="text" class="form-control" placeholder="Age" aria-label="Age" aria-describedby="material-addon6">
-			<span class="input-group-text md-addon"> </span>
+	<div class="row">
+		<div class="col">
+			<div class="md-form">
+				<i class="fas fa-map-marked"></i>
+				<input type="text" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
+			</div>
 		</div>
+		<div class="col">
+			<div class="md-form">
+				<i class="fas fa-language"></i>
+				<input type="text" class="form-control" placeholder="Language" aria-label="Language" aria-describedby="material-addon5">
+			</div>
+		</div>
+		<div class="col">
+			<div class="md-form">
+				<i class="fas fa-child"></i>
+				<input type="text" class="form-control" placeholder="Age" aria-label="Age" aria-describedby="material-addon6">
+			</div>
+		</div>
+	</div>
 		<div class="col-sm-12 md-form input-group">
 			<i class="fas fa-briefcase"></i>
 			<input type="text" class="form-control" placeholder="Occupation" aria-label="Occupation" aria-describedby="material-addon7">
