--- a/html/new_user.html
+++ b/html/new_user.html
@@ -9,7 +9,9 @@
 			</div>
 		</div>
 		<div class="col">
-			<input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="material-addon2">
+			<div class="md-form">
+				<input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="material-addon2">
+			</div>
 		</div>
 	</div>
 	<div class="row">
@@ -25,7 +27,9 @@
 		<div class="col">
 			<div class="md-form">
 				<i class="fas fa-map-marked"></i>
-				<input type="text" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
+				<input type="text" id="new_user_country" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
+				<label for="new_user_country"></label>
+
 			</div>
 		</div>
 		<div class="col">
