--- a/html/new_user.html
+++ b/html/new_user.html
@@ -28,7 +28,7 @@
 			<div class="md-form">
 				<i class="fas fa-map-marked"></i>
 				<input type="text" id="new_user_country" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
-				<label for="new_user_country"></label>
+				<label for="new_user_country">Location</label>
 
 			</div>
 		</div>
