--- a/html/new_user.html
+++ b/html/new_user.html
@@ -27,7 +27,7 @@
 		<div class="col">
 			<div class="md-form">
 				<i class="fas fa-map-marked"></i>
-				<input type="text" id="new_user_country" class="form-control" placeholder="Location" aria-label="Location" aria-describedby="material-addon4">
+				<input type="text" id="new_user_country" class="form-control">
 				<label for="new_user_country">Location</label>
 
 			</div>
@@ -45,19 +45,19 @@
 			</div>
 		</div>
 	</div>
-		<div class="col-sm-12 md-form input-group">
-			<i class="fas fa-briefcase"></i>
-			<input type="text" class="form-control" placeholder="Occupation" aria-label="Occupation" aria-describedby="material-addon7">
-			<span class="input-group-text md-addon"> </span>
+	<div class="col-sm-12 md-form input-group">
+		<i class="fas fa-briefcase"></i>
+		<input type="text" class="form-control" placeholder="Occupation" aria-label="Occupation" aria-describedby="material-addon7">
+		<span class="input-group-text md-addon"> </span>
 
-			<i class="fas fa-school"></i>
-			<input type="text" class="form-control" placeholder="Education" aria-label="Education" aria-describedby="material-addon8">
-			<span class="input-group-text md-addon"> </span>
+		<i class="fas fa-school"></i>
+		<input type="text" class="form-control" placeholder="Education" aria-label="Education" aria-describedby="material-addon8">
+		<span class="input-group-text md-addon"> </span>
 
-			<i class="fas fa-venus-mars"></i>
-			<input type="text" class="form-control" placeholder="Gender" aria-label="Gender" aria-describedby="material-addon9">
-		</div>
+		<i class="fas fa-venus-mars"></i>
+		<input type="text" class="form-control" placeholder="Gender" aria-label="Gender" aria-describedby="material-addon9">
 	</div>
+	
 
 	<div id="add_user_log">
 
