--- a/html/new_user.html
+++ b/html/new_user.html
@@ -25,7 +25,7 @@
 	</div>
 	<div class="row">
 		<div class="col">
-			<div class="md-form">
+			<div class="md-form md-5">
 				<i class="fas fa-map-marked"></i>
 				<input type="text" id="new_user_country" class="form-control">
 				<label for="new_user_country">Location</label>
@@ -57,7 +57,7 @@
 		<i class="fas fa-venus-mars"></i>
 		<input type="text" class="form-control" placeholder="Gender" aria-label="Gender" aria-describedby="material-addon9">
 	</div>
-	
+
 
 	<div id="add_user_log">
 
