--- a/html/new_user.html
+++ b/html/new_user.html
@@ -25,8 +25,8 @@
 	</div>
 	<div class="row">
 		<div class="col">
-			<div class="md-form md-5">
-				<i class="fas fa-map-marked"></i>
+			<div class="md-form">
+				<i class="fas fa-map-marked prefix"></i>
 				<input type="text" id="new_user_country" class="form-control">
 				<label for="new_user_country">Location</label>
 
