--- a/html/new_user.html
+++ b/html/new_user.html
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col">
 			<div class="md-form">
-				<i class="fas fa-user prefix"></i>
+				<i class="fas fa-user"></i>
 				<input type="text" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="material-addon1">
 			</div>
 		</div>
@@ -67,10 +67,12 @@
 			<div class="custom-control custom-radio custom-control-inline">
 				<i class="fas fa-venus prefix"></i>
 				<input type="radio" class="custom-control-input" name="new_user_gender" id="new_user_woman">
-				<label for="new_user_woman">Woman</label>
-				<i class="fas fa-mars prefix"></i>
+				<label class="custom-control-label" for="new_user_woman">Woman</label>
+			</div>
+			<div class="custom-control custom-radio custom-control-inline">
+			<i class="fas fa-mars prefix"></i>
 				<input type="radio" class="custom-control-input" name="new_user_gender" id="new_user_man">
-				<label for="new_user_man">Man</label>
+				<label class="custom-control-label" for="new_user_man">Man</label>
 			</div>
 		</div>
 	</div>
