--- a/html/new_user.html
+++ b/html/new_user.html
@@ -1,4 +1,4 @@
-<div id="begin_exp_user" style="margin-top: 100px">
+<div id="begin_exp_user" style="margin-top: 100px;margin-left: 20px">
 
 	<h5 >Add User</h5>
 
@@ -45,7 +45,7 @@
 		<div class="col">
 			<div class="md-form">
 				<i class="fas fa-child prefix"></i>
-				<input type="text" class="form-control" id="new_user_age">
+				<input type="number" class="form-control" id="new_user_age">
 				<label for="new_user_age">Age</label>
 			</div>
 		</div>
