--- a/html/new_user.html
+++ b/html/new_user.html
@@ -68,12 +68,12 @@
 		<div class="col" style="margin-top:30px">
 			<div class="custom-control custom-radio custom-control-inline">
 				<i class="fas fa-venus prefix"></i>
-				<input type="radio" class="custom-control-input" name="new_user_gender" id="new_user_woman" ng-model="new_user_gender_val" ng-value="woman">
+				<input type="radio" class="custom-control-input" id="new_user_woman" ng-model="new_user_gender_val" value="woman">
 				<label class="custom-control-label" for="new_user_woman">Woman</label>
 			</div>
 			<div class="custom-control custom-radio custom-control-inline">
 				<i class="fas fa-mars prefix"></i>
-				<input type="radio" class="custom-control-input" name="new_user_gender" id="new_user_man" ng-model="new_user_gender_val" ng-value="man">
+				<input type="radio" class="custom-control-input" id="new_user_man" ng-model="new_user_gender_val" value="man">
 				<label class="custom-control-label" for="new_user_man">Man</label>
 			</div>
 		</div>
