--- a/html/exp.html
+++ b/html/exp.html
@@ -1,8 +1,8 @@
 <div id="experiment" style="margin-top: 100px" ng-mousemove="captureCoordinate($event)">
 
 
-    <h1>
-        The Experinent
+    <h1 id="exp_hello">
+
     </h1>
     <hr>
 
