upload file test

--- a/html/nav.html
+++ b/html/nav.html
@@ -115,7 +115,7 @@
 						<div class="form-row">
 							<div class="col-sm-5 ">
 									<div class="input-default-wrapper">
-										<input type="file" id="file_csv" class="input-default-js">
+										<input type="file" id="file_csv" class="input-default-js" file-model="myFile">
 										<label class="label-for-default-js rounded-right mb-3" for="file_csv">
 											<span class="span-choose-file">Choose CSV file</span>
 										</label>
