upload file test

--- a/html/nav.html
+++ b/html/nav.html
@@ -75,7 +75,7 @@
 						<div class="form-row">
 							<div class="col">
 								<div class="col-sm-10 md-form">
-									<input type="text" class="form-control" placeholder="Experiment Name" aria-label="Experiment Name" aria-describedby="material-addon1">
+									<input type="text" id="exp_name" class="form-control" placeholder="Experiment Name" aria-label="Experiment Name" aria-describedby="material-addon1">
 
 								</div>
 								<div class="col-sm-10 md-form mb-4">
