--- a/html/nav.html
+++ b/html/nav.html
@@ -79,11 +79,11 @@
 
 								</div>
 								<div class="col-sm-10 md-form mb-4">
-									<input type="text" class="form-control" placeholder="Schema Name" aria-label="Schema Name"
+									<input type="text" id="exp_sch_name" class="form-control" placeholder="Schema Name" aria-label="Schema Name"
 										   aria-describedby="material-addon2">
 								</div>
 								<div class="col-sm-10 md-form mb-4">
-									<input type="text" class="form-control" placeholder="Pairs To Display" aria-label="Pairs To Display"
+									<input type="text" id="exp_num_pairs" class="form-control" placeholder="Pairs To Display" aria-label="Pairs To Display"
 										   aria-describedby="material-addon3">
 								</div>
 							</div>
@@ -115,7 +115,7 @@
 						<div class="form-row">
 							<div class="col-sm-5 ">
 									<div class="input-default-wrapper">
-										<input type="file" id="file_csv" class="input-default-js" file-model="myFile">
+										<input type="file" id="file_csv" class="input-default-js" file-model="file_csv">
 										<label class="label-for-default-js rounded-right mb-3" for="file_csv">
 											<span class="span-choose-file">Choose CSV file</span>
 										</label>
@@ -142,7 +142,7 @@
 									<div class="col">
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
-												<input type="file" id="first_xsd" class="input-default-js" ng-model="myFileName" file-reader="fileContent" file-model="myFile">
+												<input type="file" id="first_xsd" class="input-default-js" file-model="first_xsd_file">
 												<label class="label-for-default-js rounded-right mb-3" for="first_xsd">
 													<span class="span-choose-file">Choose XSD file</span>
 												</label>
@@ -154,7 +154,7 @@
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
 												<input type="file" id="first_xml" class="input-default-js" data-multiple-target="{target} files selected"
-													   multiple>
+													   multiple file-model="first_xml_file">
 												<label class="label-for-default-js rounded-right" for="first_xml">
 													<span class="span-choose-file">Choose XML files</span>
 												</label>
@@ -172,7 +172,7 @@
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
 												<input type="file" id="sec_xsd" class="input-default-js">
-												<label class="label-for-default-js rounded-right mb-3" for="sec_xsd">
+												<label class="label-for-default-js rounded-right mb-3" for="sec_xsd" file-model="sec_xsd_file">
 													<span class="span-choose-file">Choose second XSD file</span>
 												</label>
 											</div>
@@ -183,7 +183,7 @@
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
 												<input type="file" id="sec_xml" class="input-default-js" data-multiple-target="{target} files selected"
-													   multiple>
+													   multiple file-model="sec_xml_file">
 												<label class="label-for-default-js rounded-right" for="sec_xml">
 													<span class="span-choose-file">Choose second XML files</span>
 												</label>
