upload file test

--- a/html/nav.html
+++ b/html/nav.html
@@ -153,7 +153,7 @@
 									<div class="col">
 										<div class="col-sm-12 md-form input-group">
 											<div class="input-default-wrapper">
-												<input type="file" id="first_xml" class="input-default-js" data-multiple-target="{target} files selected"
+												<input type="file" id="first_xml" name="upload[]" class="input-default-js" data-multiple-target="{target} files selected"
 													   multiple file-model="first_xml_file">
 												<label class="label-for-default-js rounded-right" for="first_xml">
 													<span class="span-choose-file">Choose XML files</span>
